fixed portfolio images by adding overflow:hidden to main section-added placeholder links to each project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
 }
+
 body {
     background: url("../images/gray_jean/gray_jean.png");
     /*Background pattern from Toptal Subtle Patterns*/
@@ -102,6 +103,7 @@ h3 {
     width: 100%;
     max-width: 960px;
     border: 1px solid #ddd;
+    overflow: hidden;
 }
 
 #profile-photo {
